--- a/src/popup/style.css
+++ b/src/popup/style.css
@@ -1,3 +1,12 @@
 .container {
   width: 600px;
 }
+
+.mark-container {
+  display: flex;
+  flex-direction: row;
+}
+
+.mark-width{
+  width: 450px;
+}
